--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                     <img src="img/indicator3.png" alt="Market Trends">
                 </div>
                 <h2>Market Trends</h2>
-                <a href="#" class="btn">Explore Trends</a>
+                <a href="#" class="btn">Explore</a>
             </div>
         </div>
     </section>
