--- a/index.html
+++ b/index.html
@@ -1,207 +1,143 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Stock Analyzer Tool</title>
-
-    <!-- Import Poppins Font -->
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700&display=swap" rel="stylesheet">
-
-    <!-- Import Boxicons for Icons -->
-    <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet">
-
-    <!-- Custom CSS -->
-    <style>
-        /* General Reset */
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-            font-family: 'Poppins', sans-serif;
-        }
-
-        body {
-            background-color: #f9f9f9;
-            color: #333;
-        }
-
-        /* Header Section */
-        header {
-            position: fixed;
-            top: 0;
-            left: 0;
-            width: 100%;
-            background: #fff;
-            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
-            z-index: 1000;
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            padding: 10px 20px;
-        }
-
-        header h1 {
-            font-size: 1.5rem;
-            font-weight: 600;
-        }
-
-        #menu-icon {
-            font-size: 2rem;
-            cursor: pointer;
-            display: none; /* Hidden by default, visible only on smaller screens */
-        }
-
-        /* Navbar */
-        .navbar {
-            position: absolute;
-            top: 100%; /* Below the header */
-            left: 0;
-            width: 100%;
-            background: #fff;
-            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
-            display: none; /* Hidden by default */
-        }
-
-        .navbar.active {
-            display: block; /* Show when active */
-        }
-
-        .navbar ul {
-            list-style: none;
-            padding: 0;
-            margin: 0;
-        }
-
-        .navbar ul li {
-            padding: 10px 20px;
-            border-bottom: 1px solid #ddd;
-        }
-
-        .navbar ul li a {
-            text-decoration: none;
-            color: #333;
-            font-size: 1rem;
-        }
-
-        /* Responsive Design */
-        @media (max-width: 768px) {
-            #menu-icon {
-                display: block; /* Show menu icon on smaller screens */
-            }
-
-            .navbar {
-                position: absolute;
-                top: 60px; /* Below the header */
-                left: 0;
-                width: 100%;
-                background: #fff;
-                box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
-                display: none; /* Hidden by default */
-            }
-        }
-
-        /* Main Content */
-        main {
-            padding: 100px 20px 20px;
-        }
-
-        main h1 {
-            font-size: 2.5rem;
-            margin-bottom: 20px;
-        }
-
-        main p {
-            font-size: 1.2rem;
-            margin-bottom: 20px;
-        }
-
-        /* Footer */
-        footer {
-            background: #333;
-            color: #fff;
-            text-align: center;
-            padding: 20px;
-            margin-top: 40px;
-        }
-
-        footer a {
-            color: #fff;
-            text-decoration: none;
-            margin: 0 10px;
-        }
-    </style>
+    <title>Stock Analyzer Tool</title> 
+    <link rel="stylesheet" href="stylesheet.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/boxicons@latest/css/boxicons.min.css">
 </head>
 <body>
-    <!-- Header -->
     <header>
-        <h1>Stock Analyzer Tool</h1>
-        <div id="menu-icon" class="bx bx-menu"></div>
-        <nav class="navbar">
-            <ul>
-                <li><a href="#home">Home</a></li>
-                <li><a href="#stock-tools">Stock Tools</a></li>
-                <li><a href="#alerts">Alerts</a></li>
-                <li><a href="#app">App</a></li>
-                <li><a href="#about">About</a></li>
-                <li><a href="#contact">Contact</a></li>
-            </ul>
-        </nav>
+        <a href="#" class="logo header-logo"><img src="img/stock-logo.png" alt="Stock Analyzer Logo"></a>
+        <div class="bx bx-menu" id="menu-icon"></div>
+        <ul class="navbar">
+            <li><a href="#home">Home</a></li>
+            <li><a href="#analysis">Stock Tools</a></li>
+            <li><a href="#alerts">Alerts</a></li>
+            <li><a href="#app">App</a></li>
+            <li><a href="#about">About</a></li>
+            <li><a href="#contact">Contact</a></li>
+        </ul>
     </header>
 
-    <!-- Main Content -->
-    <main>
-        <section id="home">
-            <h1>Welcome to Stock Analyzer Tool</h1>
-            <p>Analyze market trends with ease</p>
-            <button>Start Analyzing</button>
-        </section>
+    <section class="home" id="home">
+        <div class="home-text">
+            <span>Welcome to</span>
+            <h1>Stock Analyzer Tool</h1>
+            <h2>Analyze market trends<br>with ease</h2>
+            <a href="#" class="btn">Start Analyzing</a>
+        </div>
+        <div class="home-img">
+            <img src="img/stock-background.jpg" alt="Stock Analyzer">
+        </div>
+    </section>
 
-        <section id="stock-tools">
-            <h2>Stock Tools</h2>
-            <p>Analyze Stocks, Technical Indicators, and Market Trends</p>
-        </section>
+    <section class="stock-analysis" id="analysis">
+        <div class="section-heading">
+            <span>Stock Tools</span>
+            <h1>Analyze Stocks</h1>
+        </div>
+        <div class="tools-container">
+            <div class="tool-box">
+                <div class="tool-img">
+                    <img src="img/indicator1.png" alt="Technical Indicator">
+                </div>
+                <h2>Technical Indicators</h2>
+                <a href="#" class="btn">Use Tool</a>
+            </div>
+            <div class="tool-box">
+                <div class="tool-img">
+                    <img src="img/indicator2.png" alt="Stock Prediction">
+                </div>
+                <h2>Stock Prediction</h2>
+                <a href="#" class="btn">Analyze Now</a>
+            </div>
+            <div class="tool-box">
+                <div class="tool-img">
+                    <img src="img/indicator3.png" alt="Market Trends">
+                </div>
+                <h2>Market Trends</h2>
+                <a href="#" class="btn">Explore</a>
+            </div>
+        </div>
+    </section>
 
-        <section id="alerts">
-            <h2>Stay Updated</h2>
-            <p>Get real-time alerts on stock price changes</p>
-        </section>
+    <section class="alerts" id="alerts">
+        <div class="section-heading">
+            <span>Stay Updated</span>
+            <h1>Get Stock Alerts</h1>
+        </div>
+        <div class="container">
+            <div class="alerts-img">
+                <img src="img/alerts.jpg" alt="Stock Alerts">
+            </div>
+            <div class="alerts-text">
+                <h2>Get real-time alerts on stock price changes</h2>
+                <p>We offer notifications on stock price movements, major news events, and market trends. Customize your alerts based on your preferred stocks and price thresholds.</p>
+                <a href="#" class="btn">Set Alerts</a>
+            </div>
+        </div>
+    </section>
 
-        <section id="app">
-            <h2>Our App</h2>
-            <p>Download our mobile app to track stocks on the go</p>
-        </section>
+    <section class="app" id="app">
+        <div class="section-heading">
+            <span>Our App</span>
+            <h1>Download Our Stock Analyzer App</h1>
+        </div>
+        <div class="container">
+            <div class="app-text">
+                <h2>Track Stocks on the Go</h2>
+                <p>Download our mobile app to access real-time stock prices, historical data, analysis tools, and alerts right from your phone!</p>
+                <a href="#" class="btn">Get App</a>
+            </div>
+            <div class="app-img">
+                <img src="img/app.png" alt="Stock App">
+            </div>
+        </div>
+    </section>
 
-        <section id="about">
-            <h2>About Us</h2>
-            <p>Innovative Stock Analysis Platform</p>
-        </section>
-    </main>
+    <section class="about" id="about">
+        <div class="section-heading">
+            <span>About Us</span>
+            <h1>Who We Are</h1>
+        </div>
+        <div class="container">
+            <div class="about-img">
+                <img src="img/about.jpg" alt="About Stock Analyzer Tool">
+            </div>
+            <div class="about-text">
+                <h2>Innovative Stock Analysis Platform</h2>
+                <p>Our platform empowers traders and investors to make better decisions by providing powerful tools and actionable insights on the stock market.</p>
+                <a href="#" class="btn">Learn More</a>
+            </div>
+        </div>
+    </section>
 
-    <!-- Footer -->
     <footer>
+        <div class="social">
+            <a href="#" class="bx bxl-facebook"></a>
+            <a href="#" class="bx bxl-twitter"></a>
+            <a href="#" class="bx bxl-linkedin"></a>
+            <a href="#" class="bx bxl-instagram"></a>
+        </div>
+        <div class="links">
+            <a href="#">Privacy Policy</a>
+            <a href="#">Terms of Service</a>
+            <a href="#">FAQ</a>
+        </div>
         <p>&copy; 2025 Stock Analyzer Tool. All rights reserved.</p>
-        <a href="#privacy-policy">Privacy Policy</a>
-        <a href="#terms-of-service">Terms of Service</a>
-        <a href="#faq">FAQ</a>
     </footer>
 
-    <!-- JavaScript -->
     <script>
-        let menu = document.querySelector('#menu-icon');
-        let navbar = document.querySelector('.navbar');
+        // JavaScript for mobile menu toggle
+        const menuIcon = document.getElementById('menu-icon');
+        const navbar = document.querySelector('.navbar');
 
-        // Toggle menu and close icons
-        menu.onclick = () => {
-            menu.classList.toggle('bx-x'); // Toggle between menu and close icons
-            navbar.classList.toggle('active'); // Show/hide the navbar
-        };
-
-        // Reset menu on scroll
-        window.onscroll = () => {
-            menu.classList.remove('bx-x'); // Reset to menu icon on scroll
-            navbar.classList.remove('active'); // Hide the navbar on scroll
-        };
+        menuIcon.addEventListener('click', () => {
+            navbar.classList.toggle('active');
+        });
     </script>
 </body>
 </html>
