--- a/index.html
+++ b/index.html
@@ -1,32 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Stock Analyzer Tool</title> 
-    <link rel="stylesheet" href="stylesheet.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/boxicons@latest/css/boxicons.min.css">
+    <title>Stock Analyzer Tool</title>
+
+    <!-- Import Poppins Font -->
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700&display=swap" rel="stylesheet">
+
+    <!-- Import Boxicons for Icons -->
+    <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet">
+
+    <!-- Link to CSS File -->
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <!-- Header -->
     <header>
-        <a href="#" class="logo header-logo"><img src="img/stock-logo.png" alt="Stock Analyzer Logo"></a>
-        <div class="bx bx-menu" id="menu-icon"></div>
-        <ul class="navbar">
-            <li><a href="#home">Home</a></li>
-            <li><a href="#analysis">Stock Tools</a></li>
-            <li><a href="#alerts">Alerts</a></li>
-            <li><a href="#app">App</a></li>
-            <li><a href="#about">About</a></li>
-            <li><a href="#contact">Contact</a></li>
-        </ul>
+        <a href="#" class="header-logo">
+            <img src="img/stock-logo.png" alt="Stock Analyzer Logo">
+        </a>
+        <div id="menu-icon" class="bx bx-menu"></div>
+        <nav class="navbar">
+            <a href="#home">Home</a>
+            <a href="#stock-tools">Stock Tools</a>
+            <a href="#alerts">Alerts</a>
+            <a href="#app">App</a>
+            <a href="#about">About</a>
+            <a href="#contact">Contact</a>
+        </nav>
     </header>
 
+    <!-- Home Section -->
     <section class="home" id="home">
         <div class="home-text">
             <span>Welcome to</span>
             <h1>Stock Analyzer Tool</h1>
-            <h2>Analyze market trends<br>with ease</h2>
+            <h2>Analyze market trends with ease</h2>
             <a href="#" class="btn">Start Analyzing</a>
         </div>
         <div class="home-img">
@@ -34,87 +44,71 @@
         </div>
     </section>
 
-    <section class="stock-analysis" id="analysis">
+    <!-- Stock Tools Section -->
+    <section class="stock-tools" id="stock-tools">
         <div class="section-heading">
             <span>Stock Tools</span>
             <h1>Analyze Stocks</h1>
         </div>
         <div class="tools-container">
             <div class="tool-box">
-                <div class="tool-img">
-                    <img src="img/indicator1.png" alt="Technical Indicator">
-                </div>
+                <img src="img/indicator1.png" alt="Technical Indicator">
                 <h2>Technical Indicators</h2>
                 <a href="#" class="btn">Use Tool</a>
             </div>
             <div class="tool-box">
-                <div class="tool-img">
-                    <img src="img/indicator2.png" alt="Stock Prediction">
-                </div>
+                <img src="img/indicator2.png" alt="Stock Prediction">
                 <h2>Stock Prediction</h2>
                 <a href="#" class="btn">Analyze Now</a>
             </div>
             <div class="tool-box">
-                <div class="tool-img">
-                    <img src="img/indicator3.png" alt="Market Trends">
-                </div>
+                <img src="img/indicator3.png" alt="Market Trends">
                 <h2>Market Trends</h2>
                 <a href="#" class="btn">Explore</a>
             </div>
         </div>
     </section>
 
+    <!-- Alerts Section -->
     <section class="alerts" id="alerts">
         <div class="section-heading">
             <span>Stay Updated</span>
             <h1>Get Stock Alerts</h1>
         </div>
-        <div class="container">
-            <div class="alerts-img">
-                <img src="img/alerts.jpg" alt="Stock Alerts">
-            </div>
-            <div class="alerts-text">
-                <h2>Get real-time alerts on stock price changes</h2>
-                <p>We offer notifications on stock price movements, major news events, and market trends. Customize your alerts based on your preferred stocks and price thresholds.</p>
-                <a href="#" class="btn">Set Alerts</a>
-            </div>
+        <div class="alerts-text">
+            <h2>Get real-time alerts on stock price changes</h2>
+            <p>We offer notifications on stock price movements, major news events, and market trends. Customize your alerts based on your preferred stocks and price thresholds.</p>
+            <a href="#" class="btn">Set Alerts</a>
         </div>
     </section>
 
+    <!-- App Section -->
     <section class="app" id="app">
         <div class="section-heading">
             <span>Our App</span>
             <h1>Download Our Stock Analyzer App</h1>
         </div>
-        <div class="container">
-            <div class="app-text">
-                <h2>Track Stocks on the Go</h2>
-                <p>Download our mobile app to access real-time stock prices, historical data, analysis tools, and alerts right from your phone!</p>
-                <a href="#" class="btn">Get App</a>
-            </div>
-            <div class="app-img">
-                <img src="img/app.png" alt="Stock App">
-            </div>
+        <div class="app-text">
+            <h2>Track Stocks on the Go</h2>
+            <p>Download our mobile app to access real-time stock prices, historical data, analysis tools, and alerts right from your phone!</p>
+            <a href="#" class="btn">Get App</a>
         </div>
     </section>
 
+    <!-- About Section -->
     <section class="about" id="about">
         <div class="section-heading">
             <span>About Us</span>
             <h1>Who We Are</h1>
         </div>
-        <div class="container">
-            <div class="about-img">
-                <img src="img/about.jpg" alt="About Stock Analyzer Tool">
-            </div>
-            <div class="about-text">
-                <h2>Innovative Stock Analysis Platform</h2>
-                <p>Our platform empowers traders and investors to make better decisions by providing powerful tools and actionable insights on the stock market.</p>
-                <a href="#" class="btn">Learn More</a>
-            </div>
+        <div class="about-text">
+            <h2>Innovative Stock Analysis Platform</h2>
+            <p>Our platform empowers traders and investors to make better decisions by providing powerful tools and actionable insights on the stock market.</p>
+            <a href="#" class="btn">Learn More</a>
         </div>
     </section>
 
+    <!-- Footer -->
     <footer>
         <div class="social">
             <a href="#" class="bx bxl-facebook"></a>
@@ -130,19 +124,7 @@
         <p>&copy; 2025 Stock Analyzer Tool. All rights reserved.</p>
     </footer>
 
-   <script>
-    let menu = document.querySelector('#menu-icon');
-    let navbar = document.querySelector('.navbar');
-    
-    menu.onclick = () => {
-        menu.classList.toggle('bx-x'); // Toggle the 'bx-x' class for the close icon
-        navbar.classList.toggle('active'); // Toggle the 'active' class for the navbar
-    };
-    
-    window.onscroll = () => {
-        menu.classList.remove('bx-x'); // Remove the 'bx-x' class when scrolling
-        navbar.classList.remove('active'); // Remove the 'active' class when scrolling
-    };
-</script>
+    <!-- Link to JavaScript File -->
+    <script src="script.js"></script>
 </body>
 </html>
