--- a/index.html
+++ b/index.html
@@ -125,6 +125,6 @@
     </footer>
 
     <!-- Link to JavaScript File -->
-    <script src="script.js"></script>
+    <script src="main.js"></script>
 </body>
 </html>
